browser/base/content/browser.css
/* ... */
#
addonbar
-
closebutton
{
visibility
:
visible
;
height
:
0
!
important
;
}
#
status
-
bar
{
height
:
0
!
important
;
-
moz
-
binding
:
none
;
padding
:
0
;
margin
:
0
;
}
panelmultiview
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
customizableui
/
panelUI
.
xml
#
panelmultiview
"
)
;
}
panelview
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
customizableui
/
panelUI
.
xml
#
panelview
"
)
;
-
moz
-
box
-
orient
:
vertical
;
}
.
panel
-
mainview
{
transition
:
transform
150ms
;
}
panelview
:
not
(
[
mainview
]
)
:
not
(
[
current
]
)
{
display
:
none
;
}
tabbrowser
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
"
)
;
}
.
tabbrowser
-
tabs
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tabs
"
)
;
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
~
#
alltabs
-
button
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
+
#
new
-
tab
-
button
#
tabbrowser
-
tabs
[
overflow
=
"
true
"
]
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
TabsToolbar
[
currentset
]
:
not
(
[
currentset
*
=
"
tabbrowser
-
tabs
new
-
tab
-
button
"
]
)
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
#
TabsToolbar
[
customizing
=
"
true
"
]
>
#
tabbrowser
-
tabs
>
.
tabbrowser
-
arrowscrollbox
>
.
tabs
-
newtab
-
button
{
visibility
:
collapse
;
}
#
tabbrowser
-
tabs
:
not
(
[
overflow
=
"
true
"
]
)
[
using
-
closing
-
tabs
-
spacer
]
~
#
alltabs
-
button
{
visibility
:
hidden
;
/
*
temporary
space
to
keep
a
tab
'
s
close
button
under
the
cursor
*
/
}
.
tabbrowser
-
tab
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
tab
"
)
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
{
-
moz
-
box
-
flex
:
100
;
max
-
width
:
180px
;
min
-
width
:
100px
;
width
:
0
;
transition
:
min
-
width
200ms
ease
-
out
max
-
width
230ms
ease
-
out
opacity
50ms
ease
-
out
20ms
/
*
hide
the
tab
for
the
first
20ms
of
the
max
-
width
transition
*
/
;
}
.
tabbrowser
-
tab
:
not
(
[
pinned
]
)
:
not
(
[
fadein
]
)
{
max
-
width
:
0
.
1px
;
min
-
width
:
0
.
1px
;
opacity
:
0
!
important
;
transition
:
min
-
width
200ms
ease
-
out
max
-
width
230ms
ease
-
out
opacity
50ms
ease
-
out
160ms
/
*
hide
the
tab
for
the
last
20ms
of
the
max
-
width
transition
*
/
;
}
.
tab
-
throbber
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
.
tab
-
label
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
.
tab
-
icon
-
image
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
.
tab
-
close
-
button
:
not
(
[
fadein
]
)
:
not
(
[
pinned
]
)
{
display
:
none
;
}
.
tabbrowser
-
tabs
[
positionpinnedtabs
]
>
.
tabbrowser
-
tab
[
pinned
]
{
position
:
fixed
!
important
;
display
:
block
;
/
*
position
:
fixed
already
does
this
(
bug
579776
)
but
let
'
s
be
explicit
*
/
}
.
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
selected
]
{
position
:
relative
;
z
-
index
:
2
;
pointer
-
events
:
none
;
/
*
avoid
blocking
dragover
events
on
scroll
buttons
*
/
}
.
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
fadein
]
:
not
(
[
selected
]
)
{
transition
:
transform
200ms
ease
-
out
;
}
#
alltabs
-
popup
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
browser
/
content
/
tabbrowser
.
xml
#
tabbrowser
-
alltabs
-
popup
"
)
;
}
toolbar
[
printpreview
=
"
true
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
printPreviewBindings
.
xml
#
printpreviewtoolbar
"
)
;
}
toolbar
[
overflowable
]
>
.
customization
-
target
{
overflow
:
hidden
;
}
toolbar
[
customizing
]
[
overflowable
]
>
.
overflow
-
button
toolbar
[
overflowable
]
:
not
(
[
overflowing
]
)
>
.
overflow
-
button
{
display
:
none
;
}
%
ifdef
CAN_DRAW_IN_TITLEBAR
#
main
-
window
[
inFullscreen
]
>
#
titlebar
#
main
-
window
[
inFullscreen
]
.
titlebar
-
placeholder
#
main
-
window
:
not
(
[
tabsintitlebar
]
)
.
titlebar
-
placeholder
{
display
:
none
;
}
#
titlebar
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
general
.
xml
#
windowdragbox
"
)
;
}
#
titlebar
-
spacer
{
pointer
-
events
:
none
;
}
#
main
-
window
[
tabsintitlebar
]
#
titlebar
-
buttonbox
{
position
:
relative
;
}
#
titlebar
-
buttonbox
{
-
moz
-
appearance
:
-
moz
-
window
-
button
-
box
;
}
%
ifdef
XP_MACOSX
#
titlebar
-
fullscreen
-
button
{
-
moz
-
appearance
:
-
moz
-
mac
-
fullscreen
-
button
;
}
%
endif
%
ifdef
XP_WIN
#
main
-
window
[
sizemode
=
"
maximized
"
]
#
titlebar
-
buttonbox
{
-
moz
-
appearance
:
-
moz
-
window
-
button
-
box
-
maximized
;
}
%
endif
%
endif
#
bookmarks
-
toolbar
-
placeholder
toolbarpaletteitem
>
#
personal
-
bookmarks
>
#
PlacesToolbar
#
personal
-
bookmarks
[
customizableui
-
areatype
=
"
menu
-
panel
"
]
>
#
PlacesToolbar
#
personal
-
bookmarks
[
customizableui
-
areatype
=
"
toolbar
"
]
.
overflowedItem
>
#
PlacesToolbar
{
display
:
none
;
}
toolbarpaletteitem
>
#
personal
-
bookmarks
>
#
bookmarks
-
toolbar
-
placeholder
#
personal
-
bookmarks
[
customizableui
-
areatype
=
"
menu
-
panel
"
]
>
#
bookmarks
-
toolbar
-
placeholder
#
personal
-
bookmarks
[
customizableui
-
areatype
=
"
toolbar
"
]
.
overflowedItem
>
#
bookmarks
-
toolbar
-
placeholder
{
display
:
-
moz
-
box
;
}
#
wrapper
-
urlbar
-
container
>
#
urlbar
-
container
>
#
urlbar
-
wrapper
>
#
urlbar
>
toolbarbutton
#
urlbar
-
reload
-
button
:
not
(
[
displaystop
]
)
+
#
urlbar
-
stop
-
button
#
urlbar
-
reload
-
button
[
displaystop
]
{
visibility
:
collapse
;
}
#
PanelUI
-
feeds
>
.
feed
-
toolbarbutton
:
-
moz
-
locale
-
dir
(
rtl
)
{
direction
:
rtl
;
}
#
panelMenu_bookmarksMenu
{
overflow
-
x
:
hidden
;
overflow
-
y
:
auto
;
}
#
panelMenu_bookmarksMenu
>
.
bookmark
-
item
{
max
-
width
:
none
;
}
#
urlbar
-
container
{
min
-
width
:
50ch
;
}
#
search
-
container
{
min
-
width
:
25ch
;
}
#
main
-
window
:
-
moz
-
lwtheme
{
background
-
repeat
:
no
-
repeat
;
background
-
position
:
top
right
;
}
/* ... */

