Bug 907787 - Hide the overflow button by default, r=jaws
UltraBlame original commit: 2512d523d5fcfbd865d5b2aea7da63e402c43dac

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1315,27 +1315,28 @@ overflow
 hidden
 ;
 }
-toolbar
-[
-customizing
-]
-[
-overflowable
-]
->
 .
 overflow
 -
 button
+{
+display
+:
+none
+;
+}
 toolbar
 [
 overflowable
+]
+[
+overflowing
 ]
 :
 not
 (
 [
-overflowing
+customizing
 ]
 )
 >
@@ -1346,7 +1347,10 @@ button
 {
 display
 :
-none
+-
+moz
+-
+box
 ;
 }
 %
